<resources>
    <string name="app_name">Manole\'s Wall of Movies</string>
    <string name="hello_world">Hello World, again and again!</string>
    <string name="optiunea1">Optiunea 1</string>
    <string name="optiunea2">Optiunea 2</string>
    <string name="myChild">Andrei</string>
    <string name="welcome_txt">%1$s, bine a venit la Zidul tau cu filme</string>
    <string name="view_movies">Vedeti filmele</string>
    <string name="add_movie">Adaugati un film </string>
    <string name="txt_help_add">Apasati aici pentru a adauga o caramida la pertele dvs.!</string>
    <string name="enter_movie_title">Adaugati numele filmului</string>
    <string name="enter_movie_genre">Adaugati genul filmului </string>
    <string name="save_movie">Salvati filmul</string>
    <string name="title_genere_warning">Titlul și genul sunt obligatorii!</string>
    <string name="movie_save">Film salvat!</string>
    <string name="nume_bd_movies">movies.dat</string>
    <string name="error_save_movies_txt">Eroare la salvarea filmelor.</string>
    <string name="title_movie">Titlu Film</string>
    <string name="show_details_btn_txt">Arată detalii…</string>
    <string name="movie_title">Titlu Film</string>
    <string name="show_details">Arată detalii…</string>
    <string name="movie_title_md">Titlu Film</string>
    <string name="movie_gen_md">Gen Film</string>
    <string name="movie_rating_md">Rating Film</string>
    <string name="movie_synopsis_md">Sinopsis film</string>
    <string name="username_hint_login">Nume de utilizator</string>
    <string name="pass_hint_login">Parolă</string>
    <string name="auth_login">Autentificare</string>
    <string name="sign_up_login">Înregistrare</string>
    <string name="no_movie_seen">Numar de filme văzute (opțional)</string>
    <string name="name_sign_up">Nume (opțional)</string>
    <string name="sign_up">Înregistrează-te</string>
    <string name="sign_up_succes">Înregistrare reușită</string>
    <string name="sign_up_error">Ceva nu a mers bine…</string>
    <string name="shared_prefs_file">user_preferences</string>
    <string name="pref_username">username_key</string>
    <string name="pref_password">password_key</string>
    <string name="pref_seen_movies_no">seen_movies_no_key</string>
    <string name="pref_name">name_key</string>
    <string name="pref_year_of_birth">year_of_birth_key</string>
    <string name="auth_succes">Autentificare reușită!</string>
    <string name="auth_fail">Nume de utilizator sau parolă incorecte.</string>
    <string name="opt_lista_de_filme">Lista de filme</string>
    <string name="opt_zid">Zidul Dvs.</string>
    <string name="opt_delogare">Delogare</string>
    <string name="title_genre_warning">Eroare la incarcarea filmului</string>
    <string name="ext_storage_denied_read">Acces interzis la citirea mediului de stocare extern</string>
    <string name="no_details">Detalii film indisponibile.</string>
    <string name="add_succes">Film adaugat cu succes!</string>
    <string name="choose_image">Alegeti imaginea</string>
    <string name="watched">Vizionat\n</string>
    <string name="view_details">Detalii\n</string>
    <string name="movie_genre">Gen film\n</string>
    <string name="movie_image">poster film\n</string>
    <string name="please_fill_all_the_fields_and_select_an_image">Intoduceti toate detaliile filmului si incarcati o imagine</string>
    <string name="current_movie_error">A aparut o problema la incarcarea filmului</string>
    <string name="genere_show_err">Eroare la aratarea \"GENULUI\"</string>
    <string name="movie_added_successfully">Film adaugat cu succes!</string>
    <string name="permission_required_images">"Este nevoie de permisiune pentru a accesa imaginile "</string>
    <string name="lead_actor_hint">Actor principal</string>
    <string name="duration_hint">Durată</string>
    <string name="release_year_hint">An lansare</string>
    <string name="director_hint">Regizor</string>
    <string name="movie_genre_hint">Gen</string>
    <string name="movie_title_hint">Titlu</string>
    <string name="on_nothing_sel_txt">Selectați un gen pentru a filtra filmele</string>
    <string name="email_not_formated">Adresa de email nu este formatată corect.</string>
    <string name="all_fileds_error">Te rugăm să completezi toate câmpurile.</string>
    <string-array name="movie_genres_array">
        <item>Horror</item>
        <item>Comedy</item>
        <item>Romantic</item>
        <item>Action</item>
    </string-array>

</resources>